--- a/person.html
+++ b/person.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Class in JavaScript</h1>
-    <p cla>persons details displayed in console</p>
+    <p cla>details of persons displayed in console</p>
     <p id="p1"></p>
 
     <script src="person.js"></script>
